--- a/Fronts/package.json
+++ b/Fronts/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/device": "3.2.4",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -21,6 +22,7 @@
   "devDependencies": {
     "@vue/test-utils": "^2.4.6",
     "happy-dom": "^17.4.4",
+    "nuxt-device": "^2.1.0",
     "vitest": "^3.1.1"
   }
 }
