--- a/Fronts/package.json
+++ b/Fronts/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/device": "3.2.4",
+    "@nuxtjs/tailwindcss": "6.13.2",
     "nuxt": "^3.16.2",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
